Bug fixes for Bootstrap 5.2 Fix bug left menu tabs not collapsing/uncollapsing properly Fix bug toast modal not displaying properly after upgrading to Bootstrap 5.2 Fix bug tooltips not showing properly on eval graph

--- a/assets/css/application.css
+++ b/assets/css/application.css
@@ -33,8 +33,9 @@ html, body {
   position: absolute;
   width: 100%;
   height: 100%;
-  display: block;
-  top: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   z-index: 100;
 }
 
